# shrooms

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LostNFound.data  LostNFound.js  LostNFound.wasm  index.html  shrooms.data  shrooms.js  shrooms.wasm
.github/workflows/: ci.yml  main.yml
apps/shrooms_demo/world/: ambient_layers.hpp  countdown.hpp  global_fx.hpp  level_loader.hpp  mushroom_catcher.hpp  pause_menu.hpp  player.hpp  shrooms_scenes.hpp  shrooms_texture_sizing.hpp  vfx.hpp
assets/: levels.data  mushrooms.data
assets/chess/: CREDITS.txt
assets/shrooms/: config.toml
assets/shrooms/audio/: CREDITS.txt
shaders/: bezier_2d_f.glsl  bezier_2d_v.glsl  bezier_raycast_2d_f.glsl  glow_blur_2d_f.glsl  glow_divide_2d_f.glsl  glow_divide_2d_v.glsl  glow_mask_2d_f.glsl  glow_mask_2d_v.glsl  implicit_warp_sprite_2d_f.glsl  implicit_warp_sprite_2d_v.glsl  mesh_color_3d_f.glsl  mesh_color_3d_v.glsl  mesh_pbr_3d_f.glsl  mesh_pbr_3d_v.glsl  mesh_shadow_3d_f.glsl  mesh_shadow_3d_v.glsl  mesh_texture_3d_f.glsl  mesh_texture_3d_v.glsl  player_glow_2d_f.glsl  raycast_2d_f.glsl  raycast_2d_v.glsl  texture_2d_f.glsl  texture_2d_v.glsl  texture_camera_2d_v.glsl  ui_default_2d_f.glsl  ui_default_2d_v.glsl  ui_texture_2d_f.glsl  ui_texture_2d_v.glsl
src/: main.cpp
src/declarations/: all_components.hpp  all_systems.hpp  animation_system.hpp  blinking_system.hpp  cleanup_system.hpp  collision_system.hpp  color_system.hpp  debug_system.hpp  deferred_system.hpp  dynamic_system.hpp  imgui_system.hpp  input_system.hpp  logger_system.hpp  minimap_system.hpp  periodic_spawner_system.hpp  readme.md  render_system.hpp  scene_system.hpp  shader_system.hpp  spawning_system.hpp  text_system.hpp  texture_system.hpp  touchscreen_system.hpp  uniform_system.hpp  visibility_system.hpp
src/definitions/components/: animated_object.hpp  blinking_object.hpp  blocking_object.hpp  camera_object.hpp  collider_object.hpp  color_object.hpp  configurable_object.hpp  controllable_object.hpp  deferred_object.hpp  dynamic_object.hpp  geometry_object.hpp  hidden_object.hpp  init_object.hpp  layered_object.hpp  minimap_object.hpp  moving_object.hpp  observable_object.hpp  periodic_spawner_object.hpp  rotating_object.hpp  scene_object.hpp  serializable_object.hpp  shader_object.hpp  spawner_object.hpp  sprite_object.hpp  stateful_object.hpp  text_object.hpp  textured_object.hpp  touch_object.hpp  transform_object.hpp
src/definitions/systems/: animation_system.hpp  blinking_system.hpp  cleanup_system.hpp  collision_system.hpp  color_system.hpp  component_loader_system.hpp  debug_system.hpp  deferred_system.hpp  dynamic_system.hpp  easy_drawable_system.hpp  following_camera_system.hpp  game_loop_system.hpp  geometry_system.hpp  gpu_program_system.hpp  imgui_system.hpp  input_system.hpp  keyboard_movement_system.hpp  level_loader_system.hpp  minimap_system.hpp  periodic_spawner_system.hpp  render_system.hpp  scene_system.hpp  spawning_system.hpp  text_system.hpp  texture_system.hpp  touchscreen_system.hpp  uniform_systems.hpp  visibility_system.hpp  window_system.hpp
src/ecs/: component.hpp  ecs.hpp  entity.hpp  entity.tpp
src/game_objects/: camera.hpp  course.hpp  fog.hpp  following_camera.hpp  player.hpp  sprite.hpp  tilemap.hpp
src/geometry/: circle.hpp  curve.hpp  point.hpp  polygon.hpp  quad.hpp  triangle.hpp
src/main/: CMakeLists.txt  main.cpp  shrooms_app.cpp  shrooms_app.hpp
src/main/custom_shaders/: implicit_warp_sprite_gray_2d_f.glsl
src/main/web/: shrooms_shell.html
src/main/world/: camera_shake.hpp  config_params.hpp  controls.hpp  daily_runtime.hpp  game_audio.hpp  game_over_sequence.hpp  global_fx.hpp  leaderboard.hpp  level_intro.hpp  level_loader.hpp  level_manager.hpp  lives.hpp  menu.hpp  mushroom_catcher.hpp  pause_menu.hpp  player.hpp  round_transition.hpp  score_hud.hpp  scoreboard.hpp  share_bridge.hpp  shrooms_assets.hpp  shrooms_screen.hpp  shrooms_texture_sizing.hpp  touchscreen.hpp  tutorial.hpp  vfx.hpp  visual_constants.hpp
src/utils/: arena.hpp  callback_registry.hpp  exit.hpp  file_system.hpp  logger.hpp  random.hpp
src/world/: level_manager.hpp  lives.hpp  menu.hpp  mushroom_catcher.hpp  pause_menu.hpp  player.hpp  scoreboard.hpp  world.hpp
